# ciftt

./: .aider.conf.yml  .gitignore  CONVENTIONS.md  LICENSE  README.md  __init__.py  ciftt.py  csv_data.py  pyproject.toml  settings.py  transform.py
github/: __init__.py  client.py  data.py  utils.py
tests/: test_csv_data.py
